--- a/devlopr-jekyll-master/_config.yml
+++ b/devlopr-jekyll-master/_config.yml
@@ -1,9 +1,9 @@
-title: devlopr
+title: MTT
 subtitle: A Portfolio Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "https://github.com/mterndrup/HTML-Web/tree/main/devlopr-jekyll-master" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
