--- a/devlopr-jekyll-master/_config.yml
+++ b/devlopr-jekyll-master/_config.yml
@@ -3,8 +3,8 @@ subtitle: A Portfolio Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "https://github.com/mterndrup/HTML-Web/tree/main/devlopr-jekyll-master" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://mterndrup.github.io/" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: "HTML-Web/tree/main/devlopr-jekyll-master" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
